# sotte.github.io

./: .gitignore  CNAME  README.md  about.html  archives.html  blog.html  dplyr-for-python.html  hytorch-a-lisp-flavoured-pytorch.html  index.html  mksite.py  no-fit-comparing-high-level-learning-interfaces-for-pytorch.html  note-to-self-how-to-publish-packages-on-pypi.html  practical-pytorch-talk-at-reinforce-conf.html  publications.html  pydata-pytorch-tutorial.html  pydata-talk-2017-on-bandits-and-swipes-gamification-of-search.html  pyproject.toml  research.html  similarity-search-with-neural-networks.html  tcr.html  tools-to-ease-eda-lightning-talk.html  uses.html
article/: 2016-01-20_publish_to_pypi.html  2017-07-14_dplyr_for_python.html  2017-07-16_pydata_bandits.html  2018-07-12_pydata_pytorch_tutorial.html  2018-07-12_pydata_tools_to_ease_eda.html  2018-09-16_pytorch_no_fit.html  2018-11-21_similarity_search_with_neural_networks.html  2018-11-25_hytorch_lisp_flavoured_pytorch.html  2019-04-01_pytorch_talk_at_reinforce.html  2024-09-09_polars-tutorial.html
author/: stefan-otte.html
category/: misc.html  todo.html  tood.html
content/: about.md  index.md  research.md  tcr.md  uses.md
content/article/: 2000-12-30_test.md  2016-01-20_publish_to_pypi.md  2017-07-14_dplyr_for_python.md  2017-07-16_pydata_bandits.md  2018-07-12_pydata_pytorch_tutorial.md  2018-07-12_pydata_tools_to_ease_eda.md  2018-07_pydata_pytorch_tutorial.md  2018-09-16_pytorch_no_fit.md  2018-11-25_hytorch_lisp_flavoured_pytorch.md  2018-11_similarity_search_with_neural_networks.md  2019-04-01_pytorch_talk_at_reinforce.md  2024-09-09_polars-tutorial.md
feeds/: all.atom.xml  stefan-otte.atom.xml  stefan-otte.rss.xml
pages/: dsa2013.html  projects.html  research.html  supervised-theses.html  tcr.html  teaching.html
static/: custom.css  pygments.css
static/images/: stefan_otte.gpg
tag/: notag.html  todo.html
templates/: article.html  base.html  blog.html  page.html
theme/css/: custom.css  monokai.css  pygment.css  skeleton.css
